Day9/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-static-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-static-webapp
  template:
    metadata:
      labels:
        app: my-static-webapp
    spec:
      containers:
      - name: my-static-webapp
        image: mayusharathod/static-webapp:latest
        ports:
        - containerPort: 80
