Day9/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-webapp-service
spec:
  selector:
    app: my-static-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
